--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
   
-<a action="/php/welcome.php"> <input type=submit>Entrar</a>
+<a action="docs/php/welcome.php"> <input type=submit>Entrar</a>
 
 
